--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,7 @@
 PORT = 5000
-JWT_SECRET = uifgurGFT4ygfd64gTYFYRHbag64762jfGHVhh662781jhh1
+JWT_SECRET = 
 DB_HOST=localhost
 DB_USER=root
-DB_PASSWORD=Pushpa@2003
+DB_PASSWORD=
 DB_DATABASE=qrscanner
 DB_PORT=3306
